# riptide-experiments

./: README.md  riptide_command_server.py
riptide_autonomy/: CMakeLists.txt
riptide_autonomy/scripts/main_container/: main_container_smach.py
riptide_autonomy/scripts/mission/: Navigate_Pass.py  Path_Marker.py  Pinger.py  Set_Sail.py  Validation_Gate.py  mission_smach.py  riptide_constants.py  robosub.py
ros_sim/: CMakeLists.txt  package.xml
ros_sim/src/: DebugViewer.py  DebugViewer_ros.py  Simulator.py  SimulatorMap_ros.py  Simulator_ros.py  ros_sim.sh
state_machine/: package.xml
thruster_controls/: CMakeLists.txt  package.xml
